Gallery text alignment fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
 }
 
 .heading {
+	text-align: center;
     justify-content: center;
 }
 
